Each district now has a DistrictId, unique within a DistrictType, seperate from the code that shows up in responses. This allows for proper handling of election districts.
The field storing a district's name is now consistently called "name" in Postgres, and similarly for "code".

All non-geometry columns associated with a district type are now returned in the district/info endpoint.
refs #18807

voterfile_codes for town/city are now added as part of the districts table.